--- a/popup.html
+++ b/popup.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Ucertify Sucks</title>
+    <title>Ucertify readings</title>
 </head>
 <body>
     <h1>Click through</h1>
+    <p>Go to chapter readings pages and click the button below.</p>
+
     <button id="readingsButton">Readings</button>
-    <button id="cardsButton">Flash Cards</button>
-    <button id="labsButton">Labs</button>
+    <p>It will start marking all as read.</p> 
+    <p>Remain on page for a a few seconds so it can work.</p>
     <div id="result"></div>
     <script src="popup.js"></script>
 </body>
